--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "postinstall": "curl -s https://raw.githubusercontent.com/reactorcore/pomander/master/bin/install | bash",
-    "start": "nodemon server",
+    "start": "nodemon server/app.js",
     "test": "NODE_ENV=test grunt test",
     "build": "webpack --watch"
   },
@@ -19,12 +19,16 @@
     "connect-flash": "^0.1.1",
     "connect-redis": "^3.2.0",
     "cookie-parser": "^1.4.3",
+    "d3": "^5.1.0",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "express-session": "^1.15.1",
+    "grunt-cli": "^1.2.0",
     "grunt-pg": "https://github.com/watsoncj/grunt-pg.git",
-    "knex": "^0.12.9",
+    "knex": "^0.14.6",
+    "knex-migrate": "^1.5.5",
     "morgan": "^1.8.1",
+    "node-sass": "^4.9.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
@@ -33,7 +37,11 @@
     "pg": "^6.1.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "redis": "^2.7.1"
+    "redis": "^2.7.1",
+    "sass-loader": "^7.0.1",
+    "sentiment": "^5.0.0",
+    "socket.io": "^2.1.0",
+    "twit": "^2.2.9"
   },
   "devDependencies": {
     "babel-loader": "^7.0.0",
@@ -41,11 +49,14 @@
     "babel-preset-latest": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "chai": "^3.5.0",
-    "grunt": "~0.4.5",
+    "css-loader": "^0.28.11",
+    "grunt": "^0.4.5",
     "grunt-eslint": "^19.0.0",
     "grunt-mocha-test": "^0.13.2",
+    "grunt-pg-db": "^1.1.0",
     "mocha": "^3.2.0",
     "node-mocks-http": "^1.6.1",
+    "style-loader": "^0.21.0",
     "supertest": "^3.0.0",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
