--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "pg": "^6.1.5",
+    "postcss-loader": "^2.1.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "redis": "^2.7.1",
@@ -50,6 +51,7 @@
     "babel-preset-react": "^6.23.0",
     "chai": "^3.5.0",
     "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^2.1.2",
     "grunt": "^0.4.5",
     "grunt-eslint": "^19.0.0",
     "grunt-mocha-test": "^0.13.2",
