--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "immutability-helper": "^2.7.0",
     "knex": "^0.14.6",
     "knex-migrate": "^1.5.5",
+    "material-ui": "^0.20.0",
     "morgan": "^1.8.1",
     "node-sass": "^4.9.0",
     "passport": "^0.3.2",
@@ -58,6 +59,7 @@
     "grunt-eslint": "^19.0.0",
     "grunt-mocha-test": "^0.13.2",
     "grunt-pg-db": "^1.1.0",
+    "image-webpack-loader": "^4.2.0",
     "mocha": "^3.2.0",
     "node-mocks-http": "^1.6.1",
     "style-loader": "^0.21.0",
