completed front end components

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "babel-core": "^6.24.1",
+    "babel-eslint": "^8.2.3",
     "bcrypt-nodejs": "^0.0.3",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
@@ -19,16 +20,23 @@
     "connect-flash": "^0.1.1",
     "connect-redis": "^3.2.0",
     "cookie-parser": "^1.4.3",
-    "d3": "^5.1.0",
+    "d3": "^3.5.17",
     "ejs": "^2.5.6",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.11.0",
     "express": "^4.15.2",
     "express-session": "^1.15.1",
+    "fusioncharts": "^3.12.2",
     "grunt-cli": "^1.2.0",
     "grunt-pg": "https://github.com/watsoncj/grunt-pg.git",
+    "highcharts": "^5.0.15",
     "immutability-helper": "^2.7.0",
     "knex": "^0.14.6",
     "knex-migrate": "^1.5.5",
     "material-ui": "^0.20.0",
+    "moment": "^2.22.1",
+    "moment-timezone": "^0.5.16",
     "morgan": "^1.8.1",
     "node-sass": "^4.9.0",
     "passport": "^0.3.2",
@@ -37,16 +45,24 @@
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "pg": "^6.1.5",
+    "pondjs": "^0.8.8",
     "postcss-loader": "^2.1.4",
+    "prop-types": "^15.6.1",
     "react": "^15.4.2",
+    "react-d3-components": "^0.9.1",
     "react-dom": "^15.4.2",
-    "react-linechart": "^1.1.12",
+    "react-easy-chart": "^1.0.0",
+    "react-jsx-highcharts": "^2.2.1",
+    "react-jsx-highstock": "^2.2.1",
+    "react-prism": "^4.3.2",
     "redis": "^2.7.1",
+    "ringjs": "0.0.1",
     "sass-loader": "^7.0.1",
     "sentiment": "^5.0.0",
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.0",
-    "twit": "^2.2.9"
+    "twit": "^2.2.9",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "babel-loader": "^7.0.0",
