--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-import": "^2.11.0",
     "express": "^4.15.2",
     "express-session": "^1.15.1",
+    "faker": "^4.1.0",
     "fusioncharts": "^3.12.2",
     "grunt-cli": "^1.2.0",
     "grunt-pg": "https://github.com/watsoncj/grunt-pg.git",
@@ -37,6 +38,7 @@
     "material-ui": "^0.20.0",
     "moment": "^2.22.1",
     "moment-timezone": "^0.5.16",
+    "mongoose": "^5.1.1",
     "morgan": "^1.8.1",
     "node-sass": "^4.9.0",
     "passport": "^0.3.2",
@@ -48,13 +50,15 @@
     "pondjs": "^0.8.8",
     "postcss-loader": "^2.1.4",
     "prop-types": "^15.6.1",
-    "react": "^15.4.2",
+    "react": "^15.6.2",
     "react-d3-components": "^0.9.1",
     "react-dom": "^15.4.2",
     "react-easy-chart": "^1.0.0",
     "react-jsx-highcharts": "^2.2.1",
     "react-jsx-highstock": "^2.2.1",
+    "react-live-clock": "^2.0.3",
     "react-prism": "^4.3.2",
+    "react-weathericons": "^1.0.4",
     "redis": "^2.7.1",
     "ringjs": "0.0.1",
     "sass-loader": "^7.0.1",
